force-app/main/default/objects/BillingSchedule__c/BillingSchedule__c.object-meta.xml
<CustomObject>
    <label>Billing Schedule</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Billing Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>