force-app/main/default/objects/BillingSchedule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>BillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>