force-app/main/default/objects/BillingSchedule__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>BillingSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>